src/test/ui/empty/empty-struct-braces-pat-3.stderr
error[E0532]: expected tuple struct or tuple variant, found struct variant `E::Empty3`
  --> $DIR/empty-struct-braces-pat-3.rs:17:9
   |
LL |     Empty3 {}
   |     --------- `E::Empty3` defined here
...
LL |         E::Empty3() => ()
   |         ^^^^^^^^^^^ help: use struct pattern syntax instead: `E::Empty3 {}`

error[E0532]: expected tuple struct or tuple variant, found struct variant `XE::XEmpty3`
  --> $DIR/empty-struct-braces-pat-3.rs:21:9
   |
LL |         XE::XEmpty3() => ()
   |         ^^^^^^^^^^^^^
   |
help: a tuple variant with a similar name exists
   |
LL |         XE::XEmpty5() => ()
   |             ^^^^^^^
help: use struct pattern syntax instead
   |
LL |         XE::XEmpty3 { /* fields */ } => ()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0532]: expected tuple struct or tuple variant, found struct variant `E::Empty3`
  --> $DIR/empty-struct-braces-pat-3.rs:25:9
   |
LL |     Empty3 {}
   |     --------- `E::Empty3` defined here
...
LL |         E::Empty3(..) => ()
   |         ^^^^^^^^^^^^^ help: use struct pattern syntax instead: `E::Empty3 {}`

error[E0532]: expected tuple struct or tuple variant, found struct variant `XE::XEmpty3`
  --> $DIR/empty-struct-braces-pat-3.rs:29:9
   |
LL |         XE::XEmpty3(..) => ()
   |         ^^^^^^^^^^^^^^^
   |
help: a tuple variant with a similar name exists
   |
LL |         XE::XEmpty5(..) => ()
   |             ^^^^^^^
help: use struct pattern syntax instead
   |
LL |         XE::XEmpty3 { /* fields */ } => ()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0532`.
